# Oxyde

./: .dockerignore  .env.example  .gitignore  .release.toml  .replit  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  replit.md  rpg_demo_standalone.rs
.github/: pull_request_template.md
.github/workflows/: ci.yml
bindings/unity/: OxydeUnity.cs
bindings/unreal/: OxydeAgentComponent.cpp  OxydeAgentComponent.h  OxydeUnreal.cpp  OxydeUnreal.h
crates/: README.md
crates/oxyde-behavior/: Cargo.toml  README.md
crates/oxyde-behavior/src/: base.rs  dialogue.rs  emotional.rs  factory.rs  greeting.rs  lib.rs  pathfinding.rs  strategy.rs
crates/oxyde-bindings/: README.md
crates/oxyde-core/: Cargo.toml  README.md
crates/oxyde-core/src/: error.rs  lib.rs
crates/oxyde-emotion/: Cargo.toml  README.md
crates/oxyde-emotion/src/: lib.rs
crates/oxyde-inference/: README.md
crates/oxyde-intent/: Cargo.toml
crates/oxyde-intent/src/: lib.rs
crates/oxyde-memory/: README.md
examples/: standalone_demo.rs
examples/config_demo/: .env.example  README.md  main.rs
examples/config_demo/configs/: guard_agent.yaml  merchant_agent.json  villager_agent.toml
examples/config_demo/configs/prompts/: custom_prompts.toml
examples/rpg_demo/: Cargo.toml  main.rs
examples/rpg_demo/assets/: config.json
examples/rpg_demo/npcs/: guard.rs  guard.toml  mod.rs  shopkeeper.rs  villager.rs
examples/rpg_demo/src/: emotion_engine.rs  goal_system.rs  llm_service.rs  openai_service.rs  web_server.rs
examples/tts_demo/: Cargo.toml
examples/tts_demo/src/: main.rs
experiments/behavior_priority_study/: README.md  analyze.py  baselines.rs  config.yaml  main.rs  patterns.rs  plot_trajectories.py  runner.rs  scenarios.rs  simple_analysis.py  trajectory_runner.rs
experiments/behavior_priority_study/results/: REPORT.txt  detailed_results.json  results.csv  statistics.json  trajectory_data.csv  trajectory_results.json  trajectory_statistics.json
src/: PROMPT_QUICKREF.md  PROMPT_TEMPLATES.md  agent.rs  config.rs  error.rs  inference.rs  lib.rs  memory.rs  prompt_templates.rs  utils.rs
src/audio/: audio_cache.rs  emotion.rs  mod.rs  providers.rs  voice_profiles.rs
src/config/: defaults.toml
src/oxyde_game/: behavior.rs  emotion.rs  intent.rs  mod.rs  pathfinding.rs  utils.rs
src/oxyde_game/behavior/: base.rs  dialogue.rs  emotional.rs  greeting.rs  mod.rs  pathfinding.rs  strategy.rs
src/oxyde_game/bindings/: mod.rs  unity.rs  unreal.rs  wasm.rs
tools/: Cargo.toml
tools/src/: main.rs
