[package]
name = "oxyde"
version = "0.1.0"
edition = "2025"
authors = ["PL, Graft, Y2Kriv, AstralFox, Zeus"]
description = "AI Agent SDK for Game NPCs"
license = "MIT"
repository = "https://github.com/DanielKrivchun/Oxyde"
readme = "README.md"
keywords = ["ai", "game", "npc", "agent", "sdk"]
categories = ["game-development", "ai"]

[profile.release]
opt-level = 'z'     # Maximum size optimization
lto = true         # Enable Link Time Optimization
codegen-units = 1  # Minimize size over compile time
panic = 'abort'    # Remove panic unwinding
strip = true       # Strip symbols from binary
debug = false      # Disable debug info
incremental = false # Disable incremental compilation
overflow-checks = false # Disable integer overflow checks
rpath = false      # Disable runtime path

[lib]
name = "oxyde"
path = "src/lib.rs"

[features]
default = ["reqwest"]
full = ["unity", "unreal", "wasm", "ai"]
unity = ["ffi-support"] 
unreal = ["ffi-support"]
wasm = ["wasm-bindgen"]
ai = ["llm", "llmchain", "tch", "reqwest"]
vector-memory = []

[dependencies]
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
llm = { version = "0.1.1", optional = true }
llmchain = { version = "0.1.3", optional = true }
tch = { version = "0.13.0", optional = true }
ndarray = "0.15.6"
rust-bert = { version = "0.21.0", optional = true, default-features = false }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
ffi-support = { version = "0.4.4", optional = true }
wasm-bindgen = { version = "0.2.86", optional = true }
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.40"
async-trait = "0.1.68"
futures = "0.3.28"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["json"], optional = true }
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"
tokio-test = "0.4.2"

[[example]]
name = "rpg_demo"
path = "examples/rpg_demo/main.rs"

[workspace]
members = ["tools", "examples/rpg_demo"]