[dependencies]
async-trait = "0.1.68"
env_logger = "0.10.0"
ffi-support = { version = "0.4.4", optional = true }
futures = "0.3.28"
lazy_static = "1.4.0"
llm = { version = "0.1.1", optional = true }
llmchain = { version = "0.1.3", optional = true }
log = "0.4.17"
ndarray = "0.15.6"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"], optional = true }
rust-bert = { version = "0.21.0", optional = true, default-features = false }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tch = { version = "0.13.0", optional = true }
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
wasm-bindgen = { version = "0.2.86", optional = true }

[dev-dependencies]
criterion = "0.5.1"
tokio-test = "0.4.2"

[[example]]
name = "rpg_demo"
path = "examples/rpg_demo/main.rs"

[[example]]
name = "behavior_priority_study"
path = "experiments/behavior_priority_study/main.rs"

[features]
ai = ["llm", "llmchain", "tch", "reqwest"]
default = ["reqwest"]
full = ["unity", "unreal", "wasm", "ai"]
unity = ["ffi-support"] 
unreal = ["ffi-support"]
vector-memory = []
wasm = ["wasm-bindgen"]

[lib]
name = "oxyde"
path = "src/lib.rs"

[package]
authors = [" AstralFox, Graft, PL, Y2Kriv"]
categories = ["development-tools", "game-development", "game-engines"]
description = "AI Agent SDK for Game NPCs"
edition = "2021"
keywords = ["ai", "game", "npc", "agent", "sdk"]
license = "MIT"
name = "oxyde"
readme = "README.md"
repository = "https://github.com/Oxyde-Labs/Oxyde"
version = "0.1.4"

[profile.release]
codegen-units = 1  # Minimize size over compile time
debug = false      # Disable debug info
incremental = false # Disable incremental compilation
lto = true         # Enable Link Time Optimization
opt-level = 'z'     # Maximum size optimization
overflow-checks = false # Disable integer overflow checks
panic = 'abort'    # Remove panic unwinding
rpath = false      # Disable runtime path
strip = true       # Strip symbols from binary

[workspace]
members = ["tools", "examples/rpg_demo"]
