[package]
name = "oxyde-tools"
version = "0.1.0"
edition = "2021"
authors = ["Oxyde Team"]
description = "CLI tools for the Oxyde SDK"

[[bin]]
name = "oxyde-cli"
path = "src/main.rs"

[dependencies]
oxyde = { path = ".." }
clap = { version = "4.1.8", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
log = "0.4.17"
env_logger = "0.10.0"
