[package]
name = "oxyde-behavior"
version = "0.1.0"
edition = "2021"
authors = ["Oxyde Labs"]
license = "MIT OR Apache-2.0"
description = "Emotion-modulated behavior system for believable game NPCs"
repository = "https://github.com/Oxyde-Labs/Oxyde"
keywords = ["gamedev", "npc", "behavior", "emotion", "ai"]
categories = ["game-development", "simulation"]

[dependencies]
#oxyde-core = { path = "../oxyde-core", version = "0.1.0" }
#oxyde-emotion = { path = "../oxyde-emotion", version = "0.1.0" }
#oxyde-intent = { path = "../oxyde-intent", version = "0.1.0" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "time"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
