[package]
name = "oxyde-core"
version = "0.1.0"
edition = "2021"
authors = ["Oxyde Labs"]
license = "MIT OR Apache-2.0"
description = "Core types and utilities for the Oxyde SDK"
repository = "https://github.com/Oxyde-Labs/Oxyde"
keywords = ["gamedev", "npc", "ai"]
categories = ["game-development"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
