[package]
name = "oxyde-intent"
version = "0.1.0"
edition = "2021"
authors = ["Oxyde Labs"]
license = "MIT OR Apache-2.0"
description = "Intent classification for NPC interactions"
repository = "https://github.com/Oxyde-Labs/Oxyde"
keywords = ["gamedev", "npc", "intent", "nlp"]
categories = ["game-development"]

[dependencies]
oxyde-core = { path = "../oxyde-core", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
